increased font size of output

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           />
         </label>
         <button id="submit-button">Submit</button>
-        <div id="output-box"></div>
+        <div id="output-box" style="text-align: center; font-size: xx-large;"></div>
       </main>
 
       <footer class="footer">
